<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PilotLogActivity!</string>
    <string name="app_name">PilotLog</string>
    <string name="FromAirfield">From</string>
    <string name="ToAirfield">To</string>
    <string name="On">On</string>
    <string name="breaksOffTime">Breaks Off</string>
    <string name="breaksOnTime">Breaks On</string>
    <string name="aircraftReg">Reg</string>
    <string name="save">Save</string>
    <string name="viewLog">View Log Entries</string>
    <string name="createLog">Create New Log Entry</string>
    <string name="pilotlog">Pilot Log</string>

</resources>