<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip" >

	<TableRow
	    android:id="@+id/tableRow2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    android:layout_marginTop="10dip" >

<TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FromAirfield" />

            <EditText
                android:id="@+id/fromAirfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                 />
            <requestFocus />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ToAirfield" />
            
            <EditText
                android:id="@+id/toAirfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:gravity="top" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/On" />

            <EditText
                android:id="@+id/flightDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_weight="1"
                >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/breaksOffTime" />

            <EditText
                android:id="@+id/breaksOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:editable="false"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowBreaksOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breaksOnTime" />

            <EditText
                android:id="@+id/breaksOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_weight="1"
                />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aircraftReg" />

            <EditText
                android:id="@+id/aircraftReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:inputType="text"
                android:layout_weight="1">

                
            </EditText>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
